Add UserMeasurements entity. Add Dto's. Configure relations in dbcontext.

--- a/src/hitfit.app/Views/Account/Registration.cshtml
+++ b/src/hitfit.app/Views/Account/Registration.cshtml
@@ -29,6 +29,10 @@
                 <input id="userlastname" name="userlastname" />
             </div>
             <div>
+                <label>Birthday</label>
+                <input type="date" id="birthday" name="birthday" />
+            </div>
+            <div>
                 <input type="submit" id="register_button" name="submit.Register" />
             </div>
         </div>
