--- a/src/hitfit.app/Views/Account/Login.cshtml
+++ b/src/hitfit.app/Views/Account/Login.cshtml
@@ -1,24 +1,62 @@
 ﻿@{
     ViewData["Title"] = "Login";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+@*<h3>@ViewData["Message"]</h3>*@
 
-<form method="post">
-    <div class="row">
-        <div class="col-md-3">
-            <h2>Login:</h2>
-            <div>
-                <label>Username</label>
-                <input id="username" name="username" />
-            </div>
-            <div>
-                <label>Password</label>
-                <input type="password" id="password" name="password" />
-            </div>
-            <div>
-                <input type="submit" id="login_button" name="submit.Login" />
-            </div>
+<link rel='stylesheet prefetch' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
+
+<link rel="stylesheet" href="~/css/login.css">
+<body>
+    <form method="post">
+        <div class='brand'>
+            <a href='https://www.jamiecoulter.co.uk' target='_blank'>
+                <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/logo.png'>
+            </a>
         </div>
-    </div>
-</form>
+        <div class='login'>
+            <div class='login_title'>
+                <span>Login to your account</span>
+            </div>
+            <div class='login_fields'>
+                <div class='login_fields__user'>
+                    <div class='icon'>
+                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/user_icon_copy.png'>
+                    </div>
+                    <input placeholder='Username' type='text' name="username">
+                    <div class='validation'>
+                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
+                    </div>
+                    </input>
+                </div>
+                <div class='login_fields__password'>
+                    <div class='icon'>
+                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/lock_icon_copy.png'>
+                    </div>
+                    <input placeholder='Password' type='password' name="password">
+                    <div class='validation'>
+                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
+                    </div>
+                </div>
+                <div class='login_fields__submit'>
+                    <input type='submit' value='Log In' name="submit.Login">
+                    <div class='forgot'>
+                        <a href='#'>Forgotten password?</a>
+                    </div>
+                </div>
+            </div>
+            @*<div class='success'>
+                    <h2>Authentication Success</h2>
+                    <p>Welcome back</p>
+                </div>*@
+        </div>
+        @*<div class='authent'>
+                <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/puff.svg'>
+                <p>Authenticating...</p>
+            </div>
+            <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+            <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>*@
+
+        <script src="~/js/login.js"></script>
+    </form>
+</body>
+
