Automate db creation. Extend database. Add new models.

--- a/src/hitfit.app/Views/Account/UpdateInfo.cshtml
+++ b/src/hitfit.app/Views/Account/UpdateInfo.cshtml
@@ -10,11 +10,11 @@
             <h2>Enter your detailed info:</h2>
             <div>
                 <label>Growth</label>
-                <input type="number" id="growth" name="growth" />
+                <input type="number" id="growth" name="growth" value="@(ViewBag.UserGrowth)" />
             </div>
             <div>
                 <label>Weight</label>
-                <input type="number" id="weight" name="weight" />
+                <input type="number" id="weight" name="weight" value="@(ViewBag.UserWeight)" />
             </div>
             <div>
             <input type="submit" id="update_button" name="submit.UpdateMeasurements" />
