--- a/src/hitfit.app/Views/Account/Registration.cshtml
+++ b/src/hitfit.app/Views/Account/Registration.cshtml
@@ -17,6 +17,10 @@
                 <input type="password" id="password" name="password" />
             </div>
             <div>
+                <label>Email</label>
+                <input id="email" name="email" />
+            </div>
+            <div>
                 <label>First name</label>
                 <input id="userfirstname" name="userfirstname" />
             </div>
@@ -28,10 +32,10 @@
                 <label>Last name</label>
                 <input id="userlastname" name="userlastname" />
             </div>
-            <div>
+            @*<div>
                 <label>Birthday</label>
                 <input type="date" id="birthday" name="birthday" />
-            </div>
+            </div>*@
             <div>
                 <input type="submit" id="register_button" name="submit.Register" />
             </div>
