--- a/src/hitfit.app/Views/Shared/_Layout.cshtml
+++ b/src/hitfit.app/Views/Shared/_Layout.cshtml
@@ -1,8 +1,12 @@
-﻿@{
+﻿@using hitfit.app.Models
+@using Microsoft.AspNetCore.Identity
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+@inject SignInManager<User> SignInManager
+@{
+    var isSignedIn = SignInManager.IsSignedIn(this.User);
     var authenticated = !string.IsNullOrEmpty(Context.Request.Cookies["token"]);
 }
 
-@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,9 +43,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    @if (string.IsNullOrEmpty(Context.Request.Cookies["token"]))
+                    @if (!SignInManager.IsSignedIn(this.User))
                     {
-                        <li><a asp-area="" asp-controller="Account" asp-action="Registration">Registration</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Register">Registration</a></li>
                         <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
                     }
                     else
