Switch to native registration and sign in logic.

--- a/src/hitfit.app/Views/Account/Register.cshtml
+++ b/src/hitfit.app/Views/Account/Register.cshtml
@@ -21,6 +21,10 @@
                 <input id="email" name="email" />
             </div>
             <div>
+                <label>Phone Number</label>
+                <input id="phonenumber" name="phonenumber" />
+            </div>
+            <div>
                 <label>First name</label>
                 <input id="userfirstname" name="userfirstname" />
             </div>
