--- a/src/hitfit.app.soon/Views/Home/Index.cshtml
+++ b/src/hitfit.app.soon/Views/Home/Index.cshtml
@@ -1,25 +1,80 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<html>
+﻿<html>
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
 
     <title>Hit-Fit is coming...</title>
-    <style>
-
-        html {
-            background: url(images/hit-fit-logo.jpg) no-repeat center center fixed;
-            background-size: cover;
-        }
-    </style>
 </head>
 
-<body>
-    <div>
-        <p class="linear-wipe">is coming...</p>
-    </div>
+<body bgcolor="black" style="margin: 0; height: 100%; overflow: hidden">
+<div>
+    <svg version="1.1"
+        id="svg3680"
+        xml:space="preserve"
+        viewBox="0 0 793.70667 415.74667"
+        sodipodi:docname="hit-fit-logo.svg">
+        <metadata id="metadata3686">
+            <rdf:RDF><cc:Work rdf:about="">
+                <dc:format>image/svg+xml</dc:format>
+                <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+
+                <dc:title></dc:title>
+            </cc:Work></rdf:RDF>
+        </metadata>
+
+        <defs id="defs3684">
+        <clipPath clipPathUnits="userSpaceOnUse" id="clipPath3708">
+            <path d="M 0,311.81 H 595.28 V 0 H 0 Z" id="path3706" inkscape:connector-curvature="0"/>
+        </clipPath>
+    </defs>
+        <sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="3200" inkscape:window-height="1690" id="namedview3682" showgrid="false" inkscape:zoom="3.4636477" inkscape:cx="396.85333" inkscape:cy="207.87334" inkscape:window-x="-12" inkscape:window-y="-12" inkscape:window-maximized="1" inkscape:current-layer="g3688" />
+
+        <g id="g3688" fill="#abd148" inkscape:groupmode="layer" inkscape:label="hit-fit-logo" transform="matrix(1.3333333,0,0,-1.3333333,0,415.74667)">
+            <path d="m 339.308,269.357 h 21.714 V 60.792 h -21.714 z" style=" fill-opacity: 1; fill-rule: nonzero; stroke: none" id="path3692" inkscape:connector-curvature="0" />
+
+            <g id="g3694" transform="translate(268.8709,269.3574)">
+                <path d="M 0,0 H 22.773 V -37.425 H 40.779 V 0 H 64.082 V -94.622 H 41.839 l -1.06,47.311 H 22.243 l 0.53,-47.311 H 0 Z" style=" fill-opacity: 1; fill-rule: nonzero; stroke: none" id="path3696" inkscape:connector-curvature="0" />
+
+            </g>
+            <g id="g3698" transform="translate(268.8709,162.5542)">
+                <path d="M 0,0 H 64.082 V -10.062 H 28.408 V -43.957 H 59.315 L 58.786,-54.549 H 28.408 v -47.213 H 0 Z" style=" fill-opacity: 1; fill-rule: nonzero; stroke: none" id="path3700" inkscape:connector-curvature="0" />
+
+            </g>
+            <g id="g3702">
+                <g id="g3704" clip-path="url(#clipPath3708)">
+                    <g id="g3710" transform="translate(368.2596,269.3574)">
+                        <path d="M 0,0 H 21.184 V -50.93 H 47.841 V -62.317 H 21.096 l -0.265,-123.132 c 0,0 1.589,-10.681 7.061,-10.681 5.85,0 7.238,6.356 7.062,11.475 -0.177,5.12 0.176,11.122 0.176,11.122 l 14.285,0.15 -0.515,-21.864 c 0,0 0.515,-15.182 -17.124,-17.477 -7.934,-0.078 -11.294,0.259 -11.294,0.259 0,0 -20.482,-0.271 -20.482,29.5 z" style=" fill-opacity: 1; fill-rule: nonzero; stroke: none" id="path3712" inkscape:connector-curvature="0" />
+
+                    </g>
+                    <g id="g3714" transform="translate(168.9506,112.1537)">
+                        <path d="m 0,0 c 1.121,11.109 1.854,12.181 2.913,18.006 1.921,10.565 1.721,15.359 2.528,23.175 0,0 1.069,-4.065 3.43,-3.579 3.966,0.815 5.581,21.12 4.257,29.395 0,0 2.495,-6.622 4.795,-6.227 3.72,0.639 2.845,13.504 1.849,17.699 0,0 2.207,-4.589 4.269,-4.288 3.933,0.575 5.568,14.403 4.558,24.59 0,0 2.294,-6.885 4.854,-6.797 5.227,0.181 7.572,10.061 7.837,25.243 0,0 2.594,-7.119 4.962,-7.324 4.06,-0.354 9.18,16.594 9.18,16.594 0,0 1.54,-2.937 2.471,-2.825 2.665,0.322 4.943,9.533 4.943,9.533 0,0 1.148,-2.118 2.802,-1.988 5.139,0.405 6.946,3.215 10.117,10.209 0,0 0.66,-1.43 1.998,-1.248 1.942,0.265 2.56,2.661 3.09,4.855 2.042,-0.093 3.479,-0.986 6.355,4.766 0,0 4.237,-0.706 7.767,7.415 v -44.575 l -9.179,4.325 9.179,-7.061 V 68.937 L 75.204,82 94.975,64.347 V 10.68 L 61.162,36.578 94.975,3.619 V -51.362 C 94.975,-51.362 0,-34.954 0,0" style=" fill-opacity: 1; fill-rule: nonzero; stroke: none" id="path3716" inkscape:connector-curvature="0" />
+
+                    </g>
+                </g>
+            </g>
+        </g>
+    </svg>
+    <svg viewBox="0 0 100 20">
+        <defs>
+            <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+                <stop offset="5%" stop-color="white" />
+                <stop offset="95%" stop-color="white" />
+            </linearGradient>
+            <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+                <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)">
+                    <animateTransform attributeName="transform"
+                                      begin="0s"
+                                      dur="1.5s"
+                                      type="translate"
+                                      from="0,0"
+                                      to="40,0"
+                                      repeatCount="indefinite" />
+                </path>
+            </pattern>
+        </defs>
+        <text font-family="Arial" text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)" fill-opacity="0.6">is coming</text>
+        <text font-family="Arial" text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.1">is coming</text>
+    </svg>
+</div>
 </body>
 
 </html>
