--- a/src/hitfit.app/Views/Home/Index.cshtml
+++ b/src/hitfit.app/Views/Home/Index.cshtml
@@ -1,89 +1,137 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div>
+<!-- Banner -->
+<section class="banner full">
+    <article>
+        <img src="images/slide01.jpg" alt="" />
+        <div class="inner">
+            <header>
+                <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
+                <h2>Hielo</h2>
+            </header>
+        </div>
+    </article>
+    <article>
+        <img src="images/slide02.jpg" alt="" />
+        <div class="inner">
+            <header>
+                <p>Lorem ipsum dolor sit amet nullam feugiat</p>
+                <h2>Magna etiam</h2>
+            </header>
+        </div>
+    </article>
+    <article>
+        <img src="images/slide03.jpg" alt="" />
+        <div class="inner">
+            <header>
+                <p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
+                <h2>Tempus dolor</h2>
+            </header>
+        </div>
+    </article>
+    <article>
+        <img src="images/slide04.jpg" alt="" />
+        <div class="inner">
+            <header>
+                <p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
+                <h2>Etiam feugiat</h2>
+            </header>
+        </div>
+    </article>
+    <article>
+        <img src="images/slide05.jpg" alt="" />
+        <div class="inner">
+            <header>
+                <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
+                <h2>Lorem adipiscing</h2>
+            </header>
+        </div>
+    </article>
+</section>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+<!-- One -->
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+
+            <div>
+                <div class="box">
+                    <div class="image fit">
+                        <img src="images/pic02.jpg" alt="" />
+                    </div>
+                    <div class="content">
+                        <header class="align-center">
+                            <p>maecenas sapien feugiat ex purus</p>
+                            <h2>Lorem ipsum dolor</h2>
+                        </header>
+                        <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                        <footer class="align-center">
+                            <a href="#" class="button alt">Learn More</a>
+                        </footer>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+
+            <div>
+                <div class="box">
+                    <div class="image fit">
+                        <img src="images/pic03.jpg" alt="" />
+                    </div>
+                    <div class="content">
+                        <header class="align-center">
+                            <p>mattis elementum sapien pretium tellus</p>
+                            <h2>Vestibulum sit amet</h2>
+                        </header>
+                        <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                        <footer class="align-center">
+                            <a href="#" class="button alt">Learn More</a>
+                        </footer>
+                    </div>
+                </div>
             </div>
+
         </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+    </div>
+</section>
+
+<!-- Two -->
+<section id="two" class="wrapper style3">
+    <div class="inner">
+        <header class="align-center">
+            <p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+            <h2>Morbi maximus justo</h2>
+        </header>
+    </div>
+</section>
+
+<!-- Three -->
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <header class="align-center">
+            <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+            <h2>Morbi maximus justo</h2>
+        </header>
+        <div class="gallery">
+            <div>
+                <div class="image fit">
+                    <a href="#"><img src="images/pic01.jpg" alt="" /></a>
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+            <div>
+                <div class="image fit">
+                    <a href="#"><img src="images/pic02.jpg" alt="" /></a>
+                </div>
+            </div>
+            <div>
+                <div class="image fit">
+                    <a href="#"><img src="images/pic03.jpg" alt="" /></a>
+                </div>
+            </div>
+            <div>
+                <div class="image fit">
+                    <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+                </div>
             </div>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    @*<div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>*@
+</section>
 </div>
