--- a/src/hitfit.app/Views/Shared/_Layout.cshtml
+++ b/src/hitfit.app/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@using Microsoft.AspNetCore.Identity
+@using hitfit.app.Models
+
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 
 <!DOCTYPE html>
 <html>
@@ -8,8 +13,9 @@
     <title>@ViewData["Title"] - Hit-Fit</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />*@
+        <link rel="stylesheet" href="~/css/main.css" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -20,9 +26,53 @@
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
+    @*<nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">*@
+            <!-- Header -->
+            <header id="header" class="alt">
+                <div class="logo">
+                    <a asp-area="" asp-controller="Home" asp-action="Index" >Hit-Fit</a>
+                    @*<a href="index.html">Hit-Fit</a>*@
+                </div>
+                <a href="#menu">Menu</a>
+            </header>
+
+            <!-- Nav -->
+<nav id="menu">
+    <ul class="links">
+        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+        }
+        else
+        {
+            {
+                <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+            }
+        }
+        @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Manage" asp-action="UploadImages">Upload images</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="generic.html">Generic</a></li>
+                    <li><a href="elements.html">Elements</a></li>*@
+    </ul>
+</nav>
+
+            
+
+
+            
+
+            <!-- Scripts -->
+            <script src="~/js/jquery.min.js"></script>
+            <script src="~/js/jquery.scrollex.min.js"></script>
+            <script src="~/js/skel.min.js"></script>
+            <script src="~/js/util.js"></script>
+            <script src="~/js/main.js"></script>
+            @*<div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -39,14 +89,24 @@
                     <li><a asp-area="" asp-controller="Manage" asp-action="UploadImages">Upload images</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
-            </div>
-        </div>
-    </nav>
+            </div>*@
+        @*</div>
+    </nav>*@
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2017 - Hit-Fit</p>
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="container">
+                <ul class="icons">
+                    @*<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>*@
+                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                &copy; Hit-Fit. All rights reserved.
+            </div>
         </footer>
     </div>
 
