--- a/src/hitfit.app/Views/Account/Login.cshtml
+++ b/src/hitfit.app/Views/Account/Login.cshtml
@@ -1,67 +1,49 @@
-﻿@{
-    ViewData["Title"] = "Login";
-}
-@using System.Collections.Generic
-@using hitfit.app.Models
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<User> SignInManager
+﻿<section id="One" class="wrapper style3">
+    <div class="inner">
+        <header class="align-center">
+            <p>Войдите, используя номер телефона или E-mail</p>
+            <h2>Вход</h2>
+        </header>
+    </div>
+</section>
 
-<link rel='stylesheet prefetch' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
-
-<link rel="stylesheet" href="~/css/login.css">
-<body>
+<div id="main" class="container">
     <form method="post">
-        <div class='brand'>
-            <a href='https://www.jamiecoulter.co.uk' target='_blank'>
-                <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/logo.png'>
-            </a>
+        <div class="row uniform">
+            <div class="6u 12u$(xsmall)">
+                <h3>Логин</h3>
+                <input type="text" name="username" id="username" value="" placeholder="Phone or Email" />
+            </div>
+            <div class="6u 12u$(xsmall)">
+                <h3>Пароль</h3>
+                <input type="password" name="password" id="password" value="" placeholder="Password" />
+            </div>
+            <div align="center">
+                <input class="button special" type="submit" name="submit.Login" value="Вход" />
+            </div>
         </div>
-        <div class='login'>
-            <div class='login_title'>
-                <span>Login to your account</span>
-            </div>
-            <div class='login_fields'>
-                <div class='login_fields__user'>
-                    <div class='icon'>
-                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/user_icon_copy.png'>
-                    </div>
-                    <input placeholder='Username' type='text' name="username">
-                    <div class='validation'>
-                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
-                    </div>
-                    </input>
-                </div>
-                <div class='login_fields__password'>
-                    <div class='icon'>
-                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/lock_icon_copy.png'>
-                    </div>
-                    <input placeholder='Password' type='password' name="password">
-                    <div class='validation'>
-                        <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
-                    </div>
-                </div>
-                <div class='login_fields__submit'>
-                    <input type='submit' value='Log In' name="submit.Login">
-                    <div class='forgot'>
-                        <a href='#'>Forgotten password?</a>
-                    </div>
-                </div>
-            </div>
-            @*<div class='success'>
-                    <h2>Authentication Success</h2>
-                    <p>Welcome back</p>
-                </div>*@
-        </div>
-        @*<div class='authent'>
-                <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/puff.svg'>
-                <p>Authenticating...</p>
-            </div>
-            <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-            <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>*@
-
-        <script src="~/js/login.js"></script>
     </form>
-</body>
+</div>
 
+    @*<input placeholder='Username' type='text' name="username">
+                        <div class='validation'>
+                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
+                        </div>
+                        </input>
+                    </div>
+                    <div class='login_fields__password'>
+                        <div class='icon'>
+                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/lock_icon_copy.png'>
+                        </div>
+                        <input placeholder='Password' type='password' name="password">
+                        <div class='validation'>
+                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
+                        </div>
+                    </div>
+                    <div class='login_fields__submit'>
+                        <input type='submit' value='Log In' name="submit.Login">
+                        <div class='forgot'>
+                            <a href='#'>Forgotten password?</a>
+                        </div>
+                    </div>
+                </div>*@
