--- a/src/hitfit.app/Views/Account/Register.cshtml
+++ b/src/hitfit.app/Views/Account/Register.cshtml
@@ -1,48 +1,85 @@
-﻿@{
-    ViewData["Title"] = "Registration";
-}
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
-
-<form method="post">
-    <div class="row">
-        <div class="col-md-3">
-            <h2>Enter your data:</h2>
-            <div>
-                <label>Login</label>
-                <input id="username" name="username" />
-            </div>
-            <div>
-                <label>Password</label>
-                <input type="password" id="password" name="password" />
-            </div>
-            <div>
-                <label>Email</label>
-                <input id="email" name="email" />
-            </div>
-            <div>
-                <label>Phone Number</label>
-                <input id="phonenumber" name="phonenumber" />
-            </div>
-            <div>
-                <label>First name</label>
-                <input id="userfirstname" name="userfirstname" />
-            </div>
-            <div>
-                <label>Middle name</label>
-                <input id="usermiddlename" name="usermiddlename" />
-            </div>
-            <div>
-                <label>Last name</label>
-                <input id="userlastname" name="userlastname" />
-            </div>
-            @*<div>
-                <label>Birthday</label>
-                <input type="date" id="birthday" name="birthday" />
+﻿<section id="One" class="wrapper style3">
+    <div class="inner">
+        <header class="align-center">
+            <p>Введите свои данные</p>
+            <h2>Регистрация</h2>
+        </header>
+    </div>
+</section>
+    
+<div id="main" class="container">
+    <form method="post">
+        <div class="row uniform">
+            @*<div class="6u 12u$(xsmall)">
+                <h3>Логин</h3>
+                <input type="text" name="username" id="username" value="" placeholder="Login"/>
             </div>*@
-            <div>
-                <input type="submit" id="register_button" name="submit.Register" />
+            
+            <div class="6u 12u$(xsmall)">
+                <h3>Телефон</h3>
+                <input type="text" name="phone" id="phone" value="" placeholder="Phone" />
+            </div>
+            <div class="6u$ 12u$(xsmall)">
+                <h3>Почта</h3>
+                <input type="email" name="email" id="email" value="" placeholder="Email" />
+            </div>
+            <div class="6u 12u$(xsmall)">
+                <h3>Пароль</h3>
+                <input type="password" name="password" id="password" value="" placeholder="Password"/>
+            </div>
+            <div class="6u$ 12u$(xsmall)">
+                <h3>Повторите пароль</h3>
+                <input type="password" name="password_confirm" id="password_confirm" value="" placeholder="Confirm password"/>
+            </div>
+            <div class="6u 12u$(xsmall)">
+                <h3>Имя</h3>
+                <input type="text" name="userfirstname" id="userfirstname" value="" placeholder="First name" />
+            </div>
+            <div class="6u 12u$(xsmall)">
+                <h3>Фамилия</h3>
+                <input type="text" name="userlastname" id="userlastname" value="" placeholder="Last name" />
+            </div>
+            <div align="center">
+                <input class="button special" type="submit" id="register_button" name="submit.Register"  value="Регистрация"/>
             </div>
         </div>
-    </div>
+        
 </form>
+</div>
+
+    @*<div class="row">
+                <div class="col-md-3">
+                    <h2>Enter your data:</h2>
+                    <div>
+                        <label>Login</label>
+                        <input id="username" name="username" />
+                    </div>
+                    <div>
+                        <label>Password</label>
+                        <input type="password" id="password" name="password" />
+                    </div>
+                    <div>
+                        <label>Email</label>
+                        <input id="email" name="email" />
+                    </div>
+                    <div>
+                        <label>Phone Number</label>
+                        <input id="phonenumber" name="phonenumber" />
+                    </div>
+                    <div>
+                        <label>First name</label>
+                        <input id="userfirstname" name="userfirstname" />
+                    </div>
+                    <div>
+                        <label>Middle name</label>
+                        <input id="usermiddlename" name="usermiddlename" />
+                    </div>
+                    <div>
+                        <label>Last name</label>
+                        <input id="userlastname" name="userlastname" />
+                    </div>
+                    <div>
+                        <input type="submit" id="register_button" name="submit.Register" />
+                    </div>
+                </div>
+            </div>*@
