--- a/src/hitfit.app/Views/Shared/_Layout.cshtml
+++ b/src/hitfit.app/Views/Shared/_Layout.cshtml
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Hit-Fit</title>
+    <title>Hit-Fit</title>
 
     <environment names="Development">
-        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />*@
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="~/css/main.css" />
     </environment>
     <environment names="Staging,Production">
@@ -26,38 +26,28 @@
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
-    @*<nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">*@
-            <!-- Header -->
-            <header id="header" class="alt">
-                <div class="logo">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" >Hit-Fit</a>
-                    @*<a href="index.html">Hit-Fit</a>*@
-                </div>
-                <a href="#menu">Menu</a>
-            </header>
+<header id="header" class="alt">
+    <div class="logo">
+        <a asp-area="" asp-controller="Home" asp-action="Index" >Hit-Fit</a>
+    </div>
+    <a href="#menu">Меню</a>
+</header>
 
-            <!-- Nav -->
 <nav id="menu">
     <ul class="links">
-        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
         @if (SignInManager.IsSignedIn(User))
         {
-            <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+            <li><a asp-area="" asp-controller="Account" asp-action="Logout">Выйти</a></li>
         }
         else
         {
             {
-                <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+                <li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
+                <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="elements">Elements</a></li>
             }
         }
-        @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Manage" asp-action="UploadImages">Upload images</a></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="generic.html">Generic</a></li>
-                    <li><a href="elements.html">Elements</a></li>*@
     </ul>
 </nav>
 
@@ -72,35 +62,16 @@
             <script src="~/js/skel.min.js"></script>
             <script src="~/js/util.js"></script>
             <script src="~/js/main.js"></script>
-            @*<div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Hit-Fit</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Manage" asp-action="UploadImages">Upload images</a></li>
-                </ul>
-                @await Html.PartialAsync("_LoginPartial")
-            </div>*@
-        @*</div>
-    </nav>*@
-    <div class="container body-content">
+           
+    <div>
         @RenderBody()
         <!-- Footer -->
         <footer id="footer">
             <div class="container">
                 <ul class="icons">
                     @*<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>*@
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://facebook.com/hitfit.sport/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/annahitfit/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
                     <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
                 </ul>
             </div>
