--- a/src/hitfit.app/Views/Account/Register.cshtml
+++ b/src/hitfit.app/Views/Account/Register.cshtml
@@ -10,37 +10,36 @@
 <div id="main" class="container">
     <form method="post">
         <div class="row uniform">
-            @*<div class="6u 12u$(xsmall)">
-                <h3>Логин</h3>
-                <input type="text" name="username" id="username" value="" placeholder="Login"/>
-            </div>*@
-            
             <div class="6u 12u$(xsmall)">
-                <h3>Телефон</h3>
-                <input type="text" name="phone" id="phone" value="" placeholder="Phone" />
+                @*<h3>Логин</h3>*@
+                <input type="text" name="username" id="username" value="" placeholder="Логин"/>
             </div>
             <div class="6u$ 12u$(xsmall)">
-                <h3>Почта</h3>
-                <input type="email" name="email" id="email" value="" placeholder="Email" />
+                @*<h3>Почта</h3>*@
+                <input type="email" name="email" id="email" value="" placeholder="E-mail" />
             </div>
             <div class="6u 12u$(xsmall)">
-                <h3>Пароль</h3>
-                <input type="password" name="password" id="password" value="" placeholder="Password"/>
+                @*<h3>Пароль</h3>*@
+                <input type="password" name="password" id="password" value="" placeholder="Пароль"/>
             </div>
             <div class="6u$ 12u$(xsmall)">
-                <h3>Повторите пароль</h3>
-                <input type="password" name="password_confirm" id="password_confirm" value="" placeholder="Confirm password"/>
+                @*<h3>Повторите пароль</h3>*@
+                <input type="password" name="password_confirm" id="password_confirm" value="" placeholder="Повторите пароль"/>
             </div>
             <div class="6u 12u$(xsmall)">
-                <h3>Имя</h3>
-                <input type="text" name="userfirstname" id="userfirstname" value="" placeholder="First name" />
+                @*<h3>Имя</h3>*@
+                <input type="text" name="userfirstname" id="userfirstname" value="" placeholder="Имя" />
+            </div>
+            <div class="6u$ 12u$(xsmall)">
+                @*<h3>Фамилия</h3>*@
+                <input type="text" name="userlastname" id="userlastname" value="" placeholder="Фамилия" />
             </div>
             <div class="6u 12u$(xsmall)">
-                <h3>Фамилия</h3>
-                <input type="text" name="userlastname" id="userlastname" value="" placeholder="Last name" />
+                @*<h3>Номер телефона</h3>*@
+                <input type="text" name="phonenumber" id="phonenumber" value="" placeholder="Номер телефона" />
             </div>
             <div align="center">
-                <input class="button special" type="submit" id="register_button" name="submit.Register"  value="Регистрация"/>
+                <input class="button special fit small" type="submit" id="register_button" name="submit.Register"  value="Регистрация"/>
             </div>
         </div>
         
