--- a/src/hitfit.app/Views/Home/Index.cshtml
+++ b/src/hitfit.app/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
 <!-- Banner -->
 <section class="banner full">
     <article>
-        <img src="images/slide01.jpg" alt="" />
+        <img src="images/slide06.jpg" alt="" />
         <div class="inner">
             <header>
-                <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
-                <h2>Hielo</h2>
+                <p>Это больше, чем спорт</p>
+                <h2>Hit-Fit</h2>
             </header>
         </div>
     </article>
