--- a/src/hitfit.app/Views/Shared/_Layout.cshtml
+++ b/src/hitfit.app/Views/Shared/_Layout.cshtml
@@ -18,14 +18,13 @@
         <link rel="stylesheet" href="~/css/main.css" />
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="~/css/main.css" />
     </environment>
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-<body>
+<body style="overflow-x: hidden; height: 100vh;">
 <header id="header" class="alt">
     <div class="logo">
         <a asp-area="" asp-controller="Home" asp-action="Index" >Hit-Fit</a>
@@ -42,65 +41,55 @@
         }
         else
         {
-            {
-                <li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="elements">Elements</a></li>
-            }
+            <li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
+            <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
         }
     </ul>
 </nav>
 
-            
-
-
-            
-
-            <!-- Scripts -->
-            <script src="~/js/jquery.min.js"></script>
-            <script src="~/js/jquery.scrollex.min.js"></script>
-            <script src="~/js/skel.min.js"></script>
-            <script src="~/js/util.js"></script>
-            <script src="~/js/main.js"></script>
+<script src="~/js/jquery.min.js"></script>
+<script src="~/js/jquery.scrollex.min.js"></script>
+<script src="~/js/skel.min.js"></script>
+<script src="~/js/util.js"></script>
+<script src="~/js/main.js"></script>
            
-    <div>
-        @RenderBody()
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="container">
-                <ul class="icons">
-                    @*<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>*@
-                    <li><a href="https://facebook.com/hitfit.sport/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="https://www.instagram.com/annahitfit/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-                </ul>
-            </div>
-            <div class="copyright">
-                &copy; Hit-Fit. All rights reserved.
-            </div>
-        </footer>
-    </div>
+<div>
+    @RenderBody()
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container">
+            <ul class="icons">
+                <li><a href="https://facebook.com/hitfit.sport/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="https://www.instagram.com/annahitfit/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            &copy; Hit-Fit. All rights reserved.
+        </div>
+    </footer>
+</div>
 
-    <environment names="Development">
+<environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
-    <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+<environment names="Staging,Production">
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+            asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+            asp-fallback-test="window.jQuery"
+            crossorigin="anonymous"
+            integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+    </script>
+    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+            crossorigin="anonymous"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+    </script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
 
     @RenderSection("Scripts", required: false)
 </body>
