--- a/src/hitfit.app/Views/Home/Index.cshtml
+++ b/src/hitfit.app/Views/Home/Index.cshtml
@@ -5,44 +5,35 @@
         <img src="images/slide06.jpg" alt="" />
         <div class="inner">
             <header>
-                <p>Это больше, чем спорт</p>
-                <h2>Hit-Fit</h2>
+                <p>Hit-Fit - это больше, чем спорт</p>
+                @*<h2>Hit-Fit</h2>*@
             </header>
         </div>
     </article>
     <article>
-        <img src="images/slide02.jpg" alt="" />
+        <img src="images/slide07.jpg" alt="" />
         <div class="inner">
             <header>
-                <p>Lorem ipsum dolor sit amet nullam feugiat</p>
-                <h2>Magna etiam</h2>
+                <p>Hit-Fit - это целая культура</p>
+                @*<h2>контроль питания</h2>*@
             </header>
         </div>
     </article>
     <article>
-        <img src="images/slide03.jpg" alt="" />
+        <img src="images/slide08.jpg" alt="" />
         <div class="inner">
             <header>
-                <p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-                <h2>Tempus dolor</h2>
+                <p>Hit-Fit - это про настоящие достижения внутри себя</p>
+                @*<h2>Tempus dolor</h2>*@
             </header>
         </div>
     </article>
     <article>
-        <img src="images/slide04.jpg" alt="" />
+        <img src="images/slide09.jpg" alt="" />
         <div class="inner">
             <header>
-                <p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-                <h2>Etiam feugiat</h2>
-            </header>
-        </div>
-    </article>
-    <article>
-        <img src="images/slide05.jpg" alt="" />
-        <div class="inner">
-            <header>
-                <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-                <h2>Lorem adipiscing</h2>
+                <p>Hit-Fit - это стиль жизни</p>
+                @*<h2>Etiam feugiat</h2>*@
             </header>
         </div>
     </article>
@@ -53,37 +44,55 @@
     <div class="inner">
         <div class="grid-style">
 
-            <div>
+            @*<div>
                 <div class="box">
                     <div class="image fit">
-                        <img src="images/pic02.jpg" alt="" />
+                        <img src="images/pic001.jpg" alt="" />
                     </div>
                     <div class="content">
                         <header class="align-center">
-                            <p>maecenas sapien feugiat ex purus</p>
-                            <h2>Lorem ipsum dolor</h2>
+                            <p>Беременность и фитнес</p>
+                            <h2>Здоровье</h2>
                         </header>
-                        <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                        <p> Мы постоянно пишем о похудении, методах борьбы с целлюлитом, разных видах фитнеса, но забыли о такой важной теме, как планирование беременности, сам процесс, роды и восстановление.</p>
                         <footer class="align-center">
-                            <a href="#" class="button alt">Learn More</a>
+                            <a href="#" class="button alt">Читать далее</a>
                         </footer>
                     </div>
                 </div>
-            </div>
+            </div>*@
 
             <div>
                 <div class="box">
                     <div class="image fit">
-                        <img src="images/pic03.jpg" alt="" />
+                        <img src="images/pic002.jpg" alt="" />
                     </div>
                     <div class="content">
                         <header class="align-center">
-                            <p>mattis elementum sapien pretium tellus</p>
-                            <h2>Vestibulum sit amet</h2>
+                            <p>Грудные импланты и фитнес: быть или не быть?</p>
+                            <h2>Здоровье</h2>
                         </header>
-                        <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                        <p> Можно ли тренироваться с грудными имплантами? Те, кто уже раскошелился на это чудо пластической хирургии, должны были услышать ответ от своих докторов. Однако вопросы доносятся со всех сторон. Значит...</p>
                         <footer class="align-center">
-                            <a href="#" class="button alt">Learn More</a>
+                            <a href="#" class="button alt">Читать далее</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            
+            <div>
+                <div class="box">
+                    <div class="image fit">
+                        <img src="images/pic003.jpg" alt="" />
+                    </div>
+                    <div class="content">
+                        <header class="align-center">
+                            <p>Какой ты фрукт?</p>
+                            <h2>Красота</h2>
+                        </header>
+                        <p> Каждая девушка — фрукт ещё тот, но мы поговорим о типах фигуры. Как определить свой тип фигуры? Как правильно ставить цели с учётом своих особенностей и не питать несбыточных надежд? Как улучшить и подчеркнуть то, что мы имеем?</p>
+                        <footer class="align-center">
+                            <a href="#" class="button alt">Читать далее</a>
                         </footer>
                     </div>
                 </div>
@@ -97,8 +106,8 @@
 <section id="two" class="wrapper style3">
     <div class="inner">
         <header class="align-center">
-            <p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-            <h2>Morbi maximus justo</h2>
+            <p>Программа создана для женщин, которые решили менять себя</p>
+            <h2>Hit-Fit. Be your own motivation</h2>
         </header>
     </div>
 </section>
@@ -107,28 +116,28 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
-            <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-            <h2>Morbi maximus justo</h2>
+            <p class="special">Вдохновляйся результатами и присоединяйся к нашей команде</p>
+            <h2>Hit-Fit. Results</h2>
         </header>
         <div class="gallery">
             <div>
                 <div class="image fit">
-                    <a href="#"><img src="images/pic01.jpg" alt="" /></a>
+                    <a href="#"><img src="images/result001.jpg" alt="" /></a>
                 </div>
             </div>
             <div>
                 <div class="image fit">
-                    <a href="#"><img src="images/pic02.jpg" alt="" /></a>
+                    <a href="#"><img src="images/result002.jpg" alt="" /></a>
                 </div>
             </div>
             <div>
                 <div class="image fit">
-                    <a href="#"><img src="images/pic03.jpg" alt="" /></a>
+                    <a href="#"><img src="images/result003.jpg" alt="" /></a>
                 </div>
             </div>
             <div>
                 <div class="image fit">
-                    <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+                    <a href="#"><img src="images/result004.jpg" alt="" /></a>
                 </div>
             </div>
         </div>
