--- a/src/hitfit.app/Views/Shared/_Layout.cshtml
+++ b/src/hitfit.app/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     </environment>
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-<body style="overflow-x: hidden; height: 100vh;">
+<body style="overflow-x: hidden; ">
 <header id="header" class="alt">
     <div class="logo">
         <a asp-area="" asp-controller="Home" asp-action="Index" >Hit-Fit</a>
