--- a/src/hitfit.app/Views/Account/Login.cshtml
+++ b/src/hitfit.app/Views/Account/Login.cshtml
@@ -15,10 +15,10 @@
         }
         <div class="row uniform">
             <div class="6u 12u$(xsmall)">
-                <input autofocus type="text" name="username" id="username" value="" placeholder="Логин или e-mail" required oninvalid="this.setCustomValidity('Пожалуйста, введите логин или e-mail.')"/>
+                <input autofocus type="text" name="username" id="username" value="" placeholder="Логин или e-mail" required oninvalid="this.setCustomValidity('Пожалуйста, введите логин или e-mail.')" oninput="setCustomValidity('')">
             </div>
             <div class="6u 12u$(xsmall)">
-                <input type="password" name="password" id="password" value="" placeholder="Пароль" required oninvalid="this.setCustomValidity('Пожалуйста, введите пароль.')"/>
+                <input type="password" name="password" id="password" value="" placeholder="Пароль" required oninvalid="this.setCustomValidity('Пожалуйста, введите пароль.')" oninput="setCustomValidity('')"/>
             </div>
             
             <div>
@@ -37,26 +37,3 @@
         </div>
     </form>
 </div>
-
-    @*<input placeholder='Username' type='text' name="username">
-                        <div class='validation'>
-                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
-                        </div>
-                        </input>
-                    </div>
-                    <div class='login_fields__password'>
-                        <div class='icon'>
-                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/lock_icon_copy.png'>
-                        </div>
-                        <input placeholder='Password' type='password' name="password">
-                        <div class='validation'>
-                            <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/tick.png'>
-                        </div>
-                    </div>
-                    <div class='login_fields__submit'>
-                        <input type='submit' value='Log In' name="submit.Login">
-                        <div class='forgot'>
-                            <a href='#'>Forgotten password?</a>
-                        </div>
-                    </div>
-                </div>*@
