--- a/src/hitfit.app/Views/Home/Index.cshtml
+++ b/src/hitfit.app/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div>
+﻿@using hitfit.app.Models
+
+<div>
 <!-- Banner -->
 <section class="banner full">
     <article>
@@ -40,73 +42,59 @@
 </section>
 
 <!-- One -->
-<section id="one" class="wrapper style2">
-    <div class="inner">
-        <div class="grid-style">
-
-            @*<div>
-                <div class="box">
-                    <div class="image fit">
-                        <img src="images/pic001.jpg" alt="" />
+    <section id="one" class="wrapper style2">
+        <header class="align-center">
+            <p class="special">Интересная информация о красоте, спорте, питании и др.</p>
+            <h2>Статьи</h2>
+        </header>
+        <div class="inner">
+            <div class="grid-style">
+                @foreach (var article in ((List<Article>) ViewBag.Articles))
+                {
+                    <div>
+                        <div class="box">
+                            <div class="image fit">
+                                <img src="data:image/jpeg;base64,@article.ImageBase64" alt="" style="object-fit: cover; height: 40vh;"/>
+                            </div>
+                            <div class="content">
+                                <header class="align-center">
+                                    <p>@article.Category.Key</p>
+                                    <h2>@article.Title</h2>
+                                </header>
+                                <p>
+                                    @if (@article.Content.Length > 200)
+                                    {
+                                        @(String.Format("{0}...", article.Content.Substring(0, 200).TrimEnd()));
+                                    }
+                                    else
+                                    {
+                                        @article.Content
+                                        ;
+                                    }
+                                </p>
+                                <footer class="align-center">
+                                    <a class="button alt" asp-route-id="@article.Id" asp-controller="Article" asp-action="ViewArticle">Читать далее</a>
+                                </footer>
+                            </div>
+                        </div>
                     </div>
-                    <div class="content">
-                        <header class="align-center">
-                            <p>Беременность и фитнес</p>
-                            <h2>Здоровье</h2>
-                        </header>
-                        <p> Мы постоянно пишем о похудении, методах борьбы с целлюлитом, разных видах фитнеса, но забыли о такой важной теме, как планирование беременности, сам процесс, роды и восстановление.</p>
-                        <footer class="align-center">
-                            <a href="#" class="button alt">Читать далее</a>
-                        </footer>
-                    </div>
-                </div>
-            </div>*@
-
-            <div>
-                <div class="box">
-                    <div class="image fit">
-                        <img src="images/pic002.jpg" alt="" />
-                    </div>
-                    <div class="content">
-                        <header class="align-center">
-                            <p>Грудные импланты и фитнес: быть или не быть?</p>
-                            <h2>Здоровье</h2>
-                        </header>
-                        <p> Можно ли тренироваться с грудными имплантами? Те, кто уже раскошелился на это чудо пластической хирургии, должны были услышать ответ от своих докторов. Однако вопросы доносятся со всех сторон. Значит...</p>
-                        <footer class="align-center">
-                            <a href="#" class="button alt">Читать далее</a>
-                        </footer>
-                    </div>
-                </div>
+                }
             </div>
-            
-            <div>
-                <div class="box">
-                    <div class="image fit">
-                        <img src="images/pic003.jpg" alt="" />
-                    </div>
-                    <div class="content">
-                        <header class="align-center">
-                            <p>Какой ты фрукт?</p>
-                            <h2>Красота</h2>
-                        </header>
-                        <p> Каждая девушка — фрукт ещё тот, но мы поговорим о типах фигуры. Как определить свой тип фигуры? Как правильно ставить цели с учётом своих особенностей и не питать несбыточных надежд? Как улучшить и подчеркнуть то, что мы имеем?</p>
-                        <footer class="align-center">
-                            <a href="#" class="button alt">Читать далее</a>
-                        </footer>
-                    </div>
-                </div>
-            </div>
-
         </div>
-    </div>
-</section>
+        <div class="container">
+            <div class="align-center">
+                <a class="button cpecial" asp-area="" asp-controller="Article" asp-action="Index">Смотреть все статьи</a>
+            </div>
+        </div>
+    </section>
+    
+    
 
-<!-- Two -->
+    <!-- Two -->
 <section id="two" class="wrapper style3">
     <div class="inner">
         <header class="align-center">
-            <p>Программа создана для женщин, которые решили менять себя</p>
+            <p>Программа создана для женщин, которые решили изменить себя</p>
             <h2>Hit-Fit. Be your own motivation</h2>
         </header>
     </div>
@@ -117,7 +105,7 @@
     <div class="inner">
         <header class="align-center">
             <p class="special">Вдохновляйся результатами и присоединяйся к нашей команде</p>
-            <h2>Hit-Fit. Results</h2>
+            <h2>Результаты</h2>
         </header>
         <div class="gallery">
             <div>
@@ -140,6 +128,11 @@
                     <a href="#"><img src="images/result004.jpg" alt="" /></a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="align-center">
+            <a class="button cpecial" href="#">Смотреть все результаты</a>
         </div>
     </div>
 </section>
